; ModuleID = '/home/carl/AnghaBench/h2o/deps/klib/test/extr_khash_test.c_ht_destroy_data.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/klib/test/extr_khash_test.c_ht_destroy_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@data_size = common dso_local global i32 0, align 4
@str_data = common dso_local global i32***** null, align 8
@int_data = common dso_local global i32***** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ht_destroy_data() #0 {
  %1 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %2

2:                                                ; preds = %14, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @data_size, align 4
  %5 = icmp slt i32 %3, %4
  br i1 %5, label %6, label %17

6:                                                ; preds = %2
  %7 = load i32*****, i32****** @str_data, align 8
  %8 = load i32, i32* %1, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32****, i32***** %7, i64 %9
  %11 = load i32****, i32***** %10, align 8
  %12 = bitcast i32**** %11 to i32*****
  %13 = call i32 @free(i32***** %12)
  br label %14

14:                                               ; preds = %6
  %15 = load i32, i32* %1, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %1, align 4
  br label %2

17:                                               ; preds = %2
  %18 = load i32*****, i32****** @str_data, align 8
  %19 = call i32 @free(i32***** %18)
  %20 = load i32*****, i32****** @int_data, align 8
  %21 = call i32 @free(i32***** %20)
  ret void
}

declare dso_local i32 @free(i32*****) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
